# imageUnderstanding

./: .gitignore  CMakeLists.txt  README.md
etc/: vocabulary_all_classes_15.xml
etc/arff/10_class_subset/: BOW_WEKA_FREAK_SIFT_50.arff  BOW_WEKA_SIFT_BRISK_250.arff  BOW_WEKA_SIFT_BRISK_450.arff  BOW_WEKA_SIFT_BRISK_50.arff  BOW_WEKA_SIFT_BRISK_650.arff  BOW_WEKA_SIFT_BRISK_850.arff  BOW_WEKA_SIFT_FAST_250.arff  BOW_WEKA_SIFT_FAST_450.arff  BOW_WEKA_SIFT_FAST_50.arff  BOW_WEKA_SIFT_FAST_650.arff  BOW_WEKA_SIFT_ORB_250.arff  BOW_WEKA_SIFT_ORB_450.arff  BOW_WEKA_SIFT_ORB_50.arff  BOW_WEKA_SIFT_ORB_650.arff  BOW_WEKA_SIFT_ORB_850.arff  BOW_WEKA_SIFT_SIFT_250.arff  BOW_WEKA_SIFT_SIFT_450.arff  BOW_WEKA_SIFT_SIFT_50.arff  BOW_WEKA_SIFT_SIFT_650.arff  BOW_WEKA_SIFT_SURF_250.arff  BOW_WEKA_SIFT_SURF_450.arff  BOW_WEKA_SIFT_SURF_50.arff  BOW_WEKA_SIFT_SURF_650.arff  BOW_WEKA_SIFT_SURF_850.arff  BOW_WEKA_SURF_BRISK_250.arff  BOW_WEKA_SURF_BRISK_450.arff  BOW_WEKA_SURF_BRISK_50.arff  BOW_WEKA_SURF_BRISK_650.arff  BOW_WEKA_SURF_BRISK_850.arff  BOW_WEKA_SURF_FAST_250.arff  BOW_WEKA_SURF_FAST_450.arff  BOW_WEKA_SURF_FAST_50.arff  BOW_WEKA_SURF_ORB_250.arff  BOW_WEKA_SURF_ORB_450.arff  BOW_WEKA_SURF_ORB_50.arff  BOW_WEKA_SURF_ORB_650.arff  BOW_WEKA_SURF_ORB_850.arff  BOW_WEKA_SURF_SIFT_250.arff  BOW_WEKA_SURF_SIFT_450.arff  BOW_WEKA_SURF_SIFT_50.arff  (+6 more)
etc/arff/full/: ColorStructure_WEKA.arff
etc/vocabularies/10_class_subset/: vocab_FREAK_SIFT_50.xml  vocab_SIFT_BRISK_250.xml  vocab_SIFT_BRISK_450.xml  vocab_SIFT_BRISK_50.xml  vocab_SIFT_BRISK_650.xml  vocab_SIFT_BRISK_850.xml  (+45 more)
include/: GlobalDescriptor.hpp  custHog.hpp  datasetIO.hpp  haar.hpp
include/globalDescriptors/: BoWDescriptor.hpp  ColorStructureDescriptor.hpp  EdgeHistogramDesc.hpp  custHog.hpp  haarHOG.hpp
java/: readme
java/src/: ClassificationEvaluator.java  CvDataset.java
src/: GlobalDescriptor.cpp  custHog.cpp  datasetIO.cpp  haar.cpp  main.cpp
src/globalDescriptors/: BoWDescriptor.cpp  ColorStructureDescriptor.cpp  EdgeHistogramDesc.cpp  custHog.cpp  haarHOG.cpp
(+6 files in other folders)
